--- a/_config.yml
+++ b/_config.yml
@@ -34,13 +34,13 @@ owner:
   twitter: razvanpetruescu
   facebook: #username
   google:
-    plus: #username
+    plus: RazvanPetruescu
     analytics:
     verify:
     ad-client:
     ad-slot:
   bing-verify:
-  github: RazvanPetruescu
+  bitbucket: razvan_petruescu
   stackoverflow: 1557686/razvan-petruescu
   linkedin: razvanpetruescu
   xing: #username
