--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ owner:
   bitbucket: razvan_petruescu
   stackoverflow: 1557686/razvan-petruescu
   linkedin: razvanpetruescu
+  cv: OmXEYK
   xing: #username
   instagram: #username
   lastfm: #username
