--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ owner:
   stackoverflow: 1557686/razvan-petruescu
   linkedin: razvanpetruescu
   cv: OmXEYK
+  coursera: 3ffd86bbc63900998ce794c1e5712b83
   xing: #username
   instagram: #username
   lastfm: #username
