--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   facebook: #username
   google:
     plus: RazvanPetruescu
-    analytics:
+    analytics: UA-69349190-1
     verify:
     ad-client:
     ad-slot:
