added a more appropriate bio

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Răzvan Petruescu
   avatar: front-for-cv.jpg
-  bio: "Bio coming up soon"
+  bio: "Functional programming for the masses"
   email:
   disqus-shortname: razvan_petruescu
   twitter: razvanpetruescu
