changed disqus shortname

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ owner:
   avatar: front-for-cv.jpg
   bio: "Functional programming for the masses"
   email:
-  disqus-shortname: razvan_petruescu
+  disqus-shortname: blog-petruescu
   twitter: razvanpetruescu
   facebook: #username
   google:
