--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ owner:
   bitbucket: razvan_petruescu
   stackoverflow: 1557686/razvan-petruescu
   linkedin: razvanpetruescu
-  cv: OmXEYK
+  #cv: OmXEYK
   coursera: 3ffd86bbc63900998ce794c1e5712b83
   xing: #username
   instagram: #username
