--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 _site
 .sass-cache
-.idea
 .DS_Store
 *.sublime-project
 *.sublime-workspace
 codekit-config.json
 node_modules
 _asset_bundler_cache
+.jekyll-metadata
