--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Home
 locale:           en_US
-url:              http://blog.petruescu.com
+url:              https://blog.petruescu.net
 
 
 # Jekyll configuration
